syntax = "proto3";

package scufflecloud.core.v1;

import "google/protobuf/timestamp.proto";
import "scufflecloud/core/v1/constraints.proto";
import "tinc/annotations.proto";

message Organization {
  string id = 1 [(string_constraint).id = true];
  optional string google_hosted_domain = 2;
  string name = 3 [(tinc.field).constraint.string = {
    min_len: 1
    max_len: 255
  }];
  string owner_id = 4 [(string_constraint).id = true];
  google.protobuf.Timestamp created_at = 5;
}

message OrganizationMember {
  string organization_id = 1 [(string_constraint).id = true];
  string user_id = 2 [(string_constraint).id = true];
  optional string invited_by_id = 3 [(string_constraint).id = true];
  google.protobuf.Timestamp created_at = 4;
}

message OrganizationInvitation {
  string id = 1 [(string_constraint).id = true];
  optional string user_id = 2 [(string_constraint).id = true];
  string organization_id = 3 [(string_constraint).id = true];
  string email = 4 [(tinc.field).constraint.string.email = true];
  string invited_by_id = 5 [(string_constraint).id = true];
  optional google.protobuf.Timestamp expires_at = 6;
  google.protobuf.Timestamp created_at = 7;
}

message Project {
  string id = 1 [(string_constraint).id = true];
  string name = 2 [(tinc.field).constraint.string = {
    min_len: 1
    max_len: 255
  }];
  string organization_id = 3 [(string_constraint).id = true];
  google.protobuf.Timestamp created_at = 4;
}
